# fastapi-minio

./: README.md  docker-compose.yml  justfile  pyproject.toml
app/: asgi.py  dependencies.py  exceptions.py  helpers.py  main.py
app/api/: files.py  router.py  routers.py
app/api/auth/: __init__.py
app/api/users/: __init__.py
app/config/: base.py  consts.py  plugins.py
app/database/migrations/: alembic.ini
app/database/migrations/versions/: 2b20a5da47b6_initial.py
app/database/models/: __init__.py  file.py  role.py  user.py  user_role.py
app/domain/accounts/: schemas.py  services.py
app/domain/files/: services.py
app/domain/repositories/: file_repository.py
app/lib/: health_check.py  upcast_env.py
app/lib/contrib/: minio.py
app/server/: lifespan.py  plugins.py
tests/integrations/: conftest.py  test_registration.py
tooling/: setup_db.py
