[project]
name = "fastapi-minio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.2",
    "alembic>=1.15.2",
    "fastapi[standard]>=0.115.12",
    "psycopg>=3.2.7",
    "saq[postgres,web]>=0.24.5",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[project.scripts]
app = "app.main:run_cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "nodeenv"]

[tool.hatch.build]
packages = ["src/app"]
dev-mode-dirs = ["src/"]
include = [
    "src/public/**/*",
    "src/app/**/*.sql",
    "src/app/database/**/*.ini",
]

[tool.ruff]
line-length = 120


